# Elysian-OS

./: .gitignore  Cargo.toml  HACKING.md  LICENSE  LICENSE-ORIGINAL  OS.iso  PLANS.md  README.md  bochsrc  build.sh
.cargo/: config.toml
kernel/: panic.c  start.c
kernel/arch/x86/: arch.c  blink.asm  boot.asm  gdt.c  idt.c  idt_helper.asm  link.ld  paging.c  pic.asm  pic_c.c  screen.c  time.c
kernel/arch/x86/include/: _idt.h  _multiboot.h  _pic.h  arch.h  paging.h  time.h  types.h  vmem.h
kernel/include/: panic.h
kernel/libk/: console.c  string.c  strings.c
kernel/libk/include/: console.h  stdarg.h  string.h
src/: io.rs  main.rs  panic.rs  test.rs
src/arch/: general.rs  mod.rs
src/io/: serial.rs  vga.rs
src/kernel/: panic.c  start.c
src/kernel/arch/x86/: _mp_table.c  arch.c  blink.asm  boot.asm  gdt.c  idt.c  idt_handler.asm  idt_helper.asm  isr_handler.asm  link.ld  paging.c  pic.asm  pic_c.c  ports.c  screen.c  time.c
src/kernel/arch/x86/include/: _gdt.h  _idt.h  _mp_table.h  _multiboot.h  _pic.h  _types.h  arch.h  gdt.h  idt.h  isr.h  pic_c.h  ports.h  screen.h  time.h  types.h  vmem.h
src/kernel/include/: panic.h
src/kernel/libk/: console.c  strings.c  util.c
src/kernel/libk/include/: console.h  stdarg.h  string.h  strings.h  util.h
src/kernel/libk/include/pdclib/: _PDCLIB_aux.h  _PDCLIB_int.h
src/kernel/libk/string/: memset.c
