[package]
name = "os"
version = "0.1.0"
authors = ["Nytelife26 <t@k-cs.co>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio",
	"-display", "none",
]
test-success-exit-code = 5
test-timeout = 30

#[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "^0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.1"
x86_64 = "0.14.3"
uart_16550 = "0.2.15"
